SDC-546 Create cdh 5.4 module (ties to spark-protolib)
SDC-546 separates kafka-protolib in kafka-common, kafka_source-protolib and kafka_target-protolib modules and add cdh5_0_4 stage library for spark streaming

kafka-common has common classes for Kafka Source and Target
kakfa_source-protolib module holds Kafka source and includes kafka-common as dependency
kafka_target-protolib module holds kafka target and includes kafka-common as dependency
spark-protolib includes kafka-source-protolib as dependency as it is module for spark streaming origin consuming data from kakfa
cdh5_0_4 module is a stage library which includes spark streaming with version 1.3.0-cdh5.4.0

Change-Id: Ibeeb4982b9999e5e248c1a1b5744c7f547af597a
Reviewed-on: https://review.streamsets.net/187
Tested-by: StreamSets CI <streamsets-ci-spam@streamsets.com>
Reviewed-by: Brock Noland <brock@streamsets.com>