@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
- (c) 2014 StreamSets, Inc. All rights reserved. May not
+ (c) 2015 StreamSets, Inc. All rights reserved. May not
  be copied, modified, or distributed in whole or part without
  written consent of StreamSets, Inc.
 -->
@@ -15,14 +15,16 @@
     <relativePath>../root-lib</relativePath>
   </parent>
   <groupId>com.streamsets</groupId>
-  <artifactId>streamsets-datacollector-cdh5-kafka_0_8_2_0_kafka_1_2_0-lib</artifactId>
+  <artifactId>streamsets-datacollector-cdh5_4_0-lib</artifactId>
   <version>1.0.0b2-SNAPSHOT</version>
-  <description>StreamSets Data Collector CDH5 Kafka 0.8.2.0 1.2.0 Lib</description>
-  <name>StreamSets Data Collector CDH5 Kafka 0.8.2.0 1.2.0 Lib</name>
+  <description>StreamSets Data Collector CDH 5.4.0 Lib</description>
+  <name>StreamSets Data Collector 5.4.0 Lib</name>
   <packaging>jar</packaging>
 
   <properties>
-    <kafka.version>0.8.2.0-kafka-1.2.0</kafka.version>
+    <spark.version>1.3.0-cdh5.4.0</spark.version>
+    <kafka.version>0.8.1.1</kafka.version>
+    <scala.version>2.10.4</scala.version>
   </properties>
 
   <repositories>
@@ -37,10 +39,49 @@
   </repositories>
 
   <dependencies>
+
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-streaming-kafka_2.10</artifactId>
+      <version>${spark.version}</version>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka_2.10</artifactId>
+      <version>${kafka.version}</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-library</artifactId>
+      <version>${scala.version}</version>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.streamsets</groupId>
+      <artifactId>streamsets-datacollector-spark-protolib</artifactId>
+      <version>${project.version}</version>
+      <scope>compile</scope>
+    </dependency>
     <dependency>
       <groupId>com.streamsets</groupId>
       <artifactId>streamsets-datacollector-api</artifactId>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.streamsets</groupId>
+      <artifactId>streamsets-datacollector-container</artifactId>
+      <version>1.0.0b2-SNAPSHOT</version> <!-- required since we are not supposed to do this -->
+      <scope>test</scope> <!-- DO NOT CHANGE, tests which require this should be moved to integration tests -->
+    </dependency>
+    <dependency>
+      <groupId>com.streamsets</groupId>
+      <artifactId>streamsets-datacollector-container-common</artifactId>
+      <version>1.0.0b2-SNAPSHOT</version> <!-- required since we are not supposed to do this -->
+      <scope>test</scope> <!-- DO NOT CHANGE, tests which require this should be moved to integration tests -->
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
@@ -80,45 +121,6 @@
     </dependency>
 
     <dependency>
-      <groupId>com.streamsets</groupId>
-      <artifactId>streamsets-datacollector-kafka_source-protolib</artifactId>
-      <version>${project.version}</version>
-      <scope>compile</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>org.scala-lang</groupId>
-          <artifactId>scala-library</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>com.101tec</groupId>
-          <artifactId>zkclient</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>com.streamsets</groupId>
-      <artifactId>streamsets-datacollector-kafka_target-protolib</artifactId>
-      <version>${project.version}</version>
-      <scope>compile</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>org.scala-lang</groupId>
-          <artifactId>scala-library</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>com.101tec</groupId>
-          <artifactId>zkclient</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.kafka</groupId>
-      <artifactId>kafka_2.10</artifactId>
-      <version>${kafka.version}</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
       <groupId>org.apache.kafka</groupId>
       <artifactId>kafka_2.10</artifactId>
       <version>${kafka.version}</version>
@@ -126,6 +128,27 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>com.streamsets</groupId>
+      <artifactId>streamsets-datacollector-kafka-common</artifactId>
+      <version>${project.version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.streamsets</groupId>
+      <artifactId>streamsets-datacollector-spark-bootstrap</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+   </dependency>
+    <!--  Part of spark assembly, so scope it out as test -->
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-streaming_2.10</artifactId>
+      <version>${spark.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -142,8 +165,7 @@
             </goals>
             <configuration>
               <sources>
-                <source>${basedir}/../kakfa_source-protolib/src/test/java</source>
-                <source>${basedir}/../kakfa_target-protolib/src/test/java</source>
+                <source>${basedir}/../spark-protolib/src/test/java</source>
               </sources>
             </configuration>
           </execution>
@@ -156,13 +178,20 @@
             <configuration>
               <resources>
                 <resource>
-                  <directory>${basedir}/../kafka_source-protolib/src/test/resources</directory>
-                  <directory>${basedir}/../kafka_target-protolib/src/test/resources</directory>
+                  <directory>${basedir}/../spark-protolib/src/test/resources</directory>
                 </resource>
               </resources>
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.18.1</version>
+        <configuration>
+            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
